Prevented the retry button from being wrapped

--- a/app/assets/stylesheets/sidekiq/monitor/jobs_table.css.sass
+++ b/app/assets/stylesheets/sidekiq/monitor/jobs_table.css.sass
@@ -17,6 +17,12 @@ div.dataTables_length label
 .jobs-table-wrapper .dataTables_filter > label > input
   width: 120px
 
+.jobs-table-wrapper .action-buttons
+  white-space: nowrap
+
+.jobs-table-wrapper .retry-job
+  margin-left: 5px
+
 .queue-stats
   float: right
   font-size: 12px
